--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,11 @@
             <version>RELEASE</version>
         </dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-aop</artifactId>
+		</dependency>
+
     </dependencies>
 
 	<build>
